--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^4.35.3",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-inline-svg": "^3.1.2"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.4.0",
