--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tanstack/vue-query": "^4.35.3",
+    "css-vars-ponyfill": "^2.4.8",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2"
   },
