--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/vue-query": "^4.35.3",
     "@vueuse/core": "^10.4.1",
     "css-vars-ponyfill": "^2.4.8",
+    "floating-vue": "^2.0.0-beta.24",
     "gsap": "^3.12.2",
     "vue": "^3.3.4",
     "vue-inline-svg": "^3.1.2"
