--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tanstack/vue-query": "^4.35.3",
     "@vueuse/core": "^10.4.1",
+    "axios": "^1.5.1",
     "css-vars-ponyfill": "^2.4.8",
     "floating-vue": "^2.0.0-beta.24",
     "gsap": "^3.12.2",
