--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.12.2",
     "swiper": "^10.3.1",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.5.0",
     "vue-inline-svg": "^3.1.2"
   },
   "devDependencies": {
