--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@tanstack/vue-query": "^4.35.3",
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "css-vars-ponyfill": "^2.4.8",
     "floating-vue": "^2.0.0-beta.24",
     "gsap": "^3.12.2",
     "swiper": "^10.3.1",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.5.0",
     "vue-inline-svg": "^3.1.2"
   },
