--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.vue,.ts src",
     "format:check": "prettier --check .",
-    "format:write": "prettier --write ."
+    "format:write": "prettier --write .",
+    "test": "vitest"
   },
   "dependencies": {
     "@tanstack/vue-query": "^4.35.3",
@@ -29,15 +30,18 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^6.4.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/test-utils": "^2.4.1",
     "eslint": "^8.47.0",
     "eslint-plugin-typescript-enum": "^2.1.0",
     "eslint-plugin-vue": "^9.17.0",
+    "happy-dom": "^12.10.3",
     "prettier": "3.0.2",
     "sass": "^1.65.1",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.5"
   }
 }
